add sectio courses

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,30 +1,65 @@
 {
-  "home": "الرئيسية",
-  "about": "نبذة عني",
-  "projects": "المشاريع",
-  "contact": "اتصل بي",
-  "toggle_dark": "الوضع الليلي",
-  "toggle_light": "الوضع النهاري",
-  "language": "اللغة",
-  "about_title": "من أنا",
-  "about_description_1": "أنا",
-  "about_name": "طلال الشعبان",
-  "about_profession": "مهندس برمجيات",
-  "about_text": "مهندس برمجيات شغوف متخصص في بناء تطبيقات ويب حديثة وآمنة ومركزة على المستخدم.",
-  "about_text2": "أجمع بين تطوير الواجهة الأمامية والوعي بالأمن السيبراني وتحليل البيانات لتقديم حلول رقمية فعالة وقابلة للتوسع.",
-  "about_text3": "سواءً في تصميم واجهات نظيفة باستخدام React وTailwind CSS، أو دمج منطق الخلفية باستخدام Node.js — أعمل على تحقيق الأفكار بأمان وجمال.",
-  "certificates": "الشهادات",
-  "years_experience": "سنوات الخبرة",
-  "projects": "المشاريع",
-  "contact_title": "تواصل معي",
-  "contact_name_placeholder": "اسمك",
-  "contact_email_placeholder": "بريدك الإلكتروني",
-  "contact_message_placeholder": "رسالتك",
-  "contact_send_button": "إرسال الرسالة",
-  "hero_greeting": "مرحباً، أنا",
-  "hero_name": "طلال الشعبان",
-  "hero_professions": "مهندس برمجيات | مطور ويب | متخصص أمن سيبراني وتحليل بيانات",
-  "download_cv": "تحميل السيرة الذاتية",
-  "skills": "المهارات",
-  "tools": "الأدوات"
-}
+    "home": "الرئيسية",
+    "about": "نبذة عني",
+    "projects": "المشاريع",
+    "contact": "اتصل بي",
+    "toggle_dark": "الوضع الليلي",
+    "toggle_light": "الوضع النهاري",
+    "language": "اللغة",
+    "about_title": "من أنا",
+    "about_description_1": "أنا",
+    "about_name": "طلال الشعبان",
+    "about_profession": "مهندس برمجيات",
+    "about_text": "مهندس برمجيات شغوف متخصص في بناء تطبيقات ويب حديثة وآمنة ومركزة على المستخدم.",
+    "about_text2": "أجمع بين تطوير الواجهة الأمامية والوعي بالأمن السيبراني وتحليل البيانات لتقديم حلول رقمية فعالة وقابلة للتوسع.",
+    "about_text3": "سواءً في تصميم واجهات نظيفة باستخدام React وTailwind CSS، أو دمج منطق الخلفية باستخدام Node.js — أعمل على تحقيق الأفكار بأمان وجمال.",
+    "certificates": "الشهادات",
+    "years_experience": "سنوات الخبرة",
+    "projects": "المشاريع",
+    "contact_title": "تواصل معي",
+    "contact_name_placeholder": "اسمك",
+    "contact_email_placeholder": "بريدك الإلكتروني",
+    "contact_message_placeholder": "رسالتك",
+    "contact_send_button": "إرسال الرسالة",
+    "hero_greeting": "مرحباً، أنا",
+    "hero_name": "طلال الشعبان",
+    "hero_professions": "مهندس برمجيات | مطور ويب | متخصص أمن سيبراني وتحليل بيانات",
+    "download_cv": "تحميل السيرة الذاتية",
+    "skills": "المهارات",
+    "tools": "الأدوات",
+  
+
+        "courses": {
+          "title": "الدورات",
+          "date": "التاريخ",
+          "fullstackJS": {
+            "title": "معسكر بناء تطبيقات ومواقع الويب باستخدام JavaScript",
+            "description": "معسكر شامل يركز على تطوير تطبيقات الويب باستخدام JavaScript من جهة العميل والخادم، يتضمن بناء واجهات مستخدم تفاعلية، إدارة قواعد البيانات، واستخدام تقنيات Fullstack الحديثة لتطوير مشاريع عملية جاهزة للاستخدام."
+          },
+          "networkPlus": {
+            "title": "Network+",
+            "description": "يتم تدريب الطلاب على دورة Network+ المقدمة من شركة CompTIA وهي دورة تعنى بتأسيس الطالب عن أساسيات الشبكات بشكل عام، وتؤهله للتقدم نحو أي تكنولوجيا مستقبلية سواء كانت من مايكرسوفت أو سيسكو أو غيره."
+          },
+          "networkPenTest": {
+            "title": "اختبار اختراق الشبكات",
+            "description": "يهدف المعسكر إلى تعلم اختبار اختراق الشبكات وتقييم الثغرات الأمنية والعثور على نقاط الضعف في التطبيقات واختبار التنصت على الأجهزة المتصلة بنفس الشبكة المحلية بمجموعة متنوعة من الأدوات والتقنيات."
+          },
+          "webAppPenTest": {
+            "title": "معسكر اختبار اختراق تطبيقات الويب",
+            "description": "يهدف المعسكر إلى تعلم اختبار اختراق تطبيقات الويب وتقييم الثغرات الأمنية والعثور على نقاط الضعف في التطبيقات. يؤهل المعسكر إلى الحصول على الشهادتين الاحترافية eWPTv2, eWPTX المقدمة من شركة eLearnsecurity."
+          },
+          "digitalForensics": {
+            "title": "التحليل الجنائي الرقمي",
+            "description": "هي دورة تختص في قسم التحليل الجنائي الرقمي تساعدك على التعرف على الأدلة الرقمية وطريقة جمعها وتحليلها وتؤهل المتدرب للحصول على شهادة eCDFP الاحترافية المقدمة من eLearnsecurity."
+          },
+          "grcIntro": {
+            "title": "مقدمة في الحوكمة وإدارة المخاطر والامتثال (GRC)",
+            "description": "تهدف إلى تمكين المتدربين من فهم أسس وأهمية الحوكمة وإدارة المخاطر وضمان الامتثال في المؤسسات. ويزود المشاركين بالمعرفة والأدوات اللازمة لتقييم المخاطر، وضمان الامتثال للمعايير والقوانين."
+          },
+          "cyberFundamentals": {
+            "title": "معسكر أساسيات الأمن السيبراني",
+            "description": "يهدف المعسكر إلى تعلم أساسيات الأمن السيبراني واختبار الاختراق، مع التركيز على المفاهيم الأساسية لحماية الأنظمة وتقييم الثغرات الأمنية. يؤهل المعسكر المشاركين للحصول على شهادة CompTIA eJPT المقدمة من INE."
+          }
+        }
+
+  }
